support-service/k8/k8.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: support-service-deployment
  labels:
    app: support-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: support-service
  template:
    metadata:
      labels:
        app: support-service
    spec:
      containers:
      - name: support-service
        image: registry.cloud.sdu.dk/sdu-cloud/support-service:1.3.1
        livenessProbe:
          httpGet:
            port: 8080
            path: /status
          initialDelaySeconds: 3
          periodSeconds: 30
          failureThreshold: 5
        command:
        - /opt/service/bin/service
        - --config-dir
        - /etc/notifiers
        - --config-dir
        - /etc/token-validation
        volumeMounts:
        - mountPath: /etc/notifiers
          name: notifiers
        - mountPath: /etc/token-validation
          name: token-validation

      volumes:
      - name: notifiers
        secret:
          defaultMode: 420
          optional: false
          secretName: support-notifiers
      - configMap:
          defaultMode: 420
          name: token-validation
        name: token-validation

      imagePullSecrets:
        - name: esci-docker
