support-service/k8/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: support
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v0
      kind: Mapping
      name: support
      prefix: /api/support/
      service: support-service:8080
      rewrite: ""

spec:
  clusterIP: None
  type: ClusterIP
  selector:
    app: support-service
